2010-08-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvLine.c (LineDeleteCoords): [Bug 2900121]: Backport of
	fix to sense of test.

2010-08-10  Don Porter  <dgp@users.sourceforge.net>

	* library/msgs/pl.msg:	Backport updates to pl.msg from HEAD

2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* license.terms: Fix DFARs note for number-adjusted rights clause

2010-08-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.9 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updated for 8.5.9 release.

2010-08-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/button.tcl (::tk::CheckEnter): [AS Bug#87409]: Use uplevel
	set instead of set :: to work with other var resolvers (itcl).

2010-08-03  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.9 release.

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* doc/text.n: Fixed minor typo in the description of 'text delete', as
	reported by <eee@users.sf.net> on the chat.

2010-05-31  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkBind.c (Tk_CreateBinding): [Bug 3006842]: Silently ignore
	empty binding scripts.
	* generic/ttk/ttkTreeview.c: [$tv tag bind $tag <...> {}] now removes
	binding.

2010-05-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:  Fix CYGWIN warning: "fd_set and assiciated.macros
	have been defined in sys/types. This may cause runtime problems with
	W32"
	* win/winMain.c:     Add command line processing for CYGWIN, backported
	from trunk.

2010-05-20  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinX.c (HandleIMEComposition): [Bug 2992129]: Ensure that all
	places that generate key events zero them out first; Tk relies on that
	being true for the generic parts of the fix for Bug 1924761.

2010-05-19  Jan Nijtmans  <nijtmans@users.sf.net>
